# litestar-base

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md
docs/adr/: 0001-dishka-for-di.md  0002-litestar-channels-event-bus.md  0003-sqlite-wal-readers.md  0004-static-bearer-cookie-auth.md  0005-msgspec-wire-payloads.md  template.md
docs/contexts/: admin-log.md  admin.md  auth.md
docs/infra/: dishka.md  sqlite.md  structlog.md  yoyo.md
docs/subsystems/: error_hierarchy.md  event_bus.md  observability.md
migrations/admin_log/: 0001_init.sql
src/admin/: provider.py
src/admin/adapters/driving/: error_handlers.py
src/admin/app/: __init__.py
src/admin/app/interfaces/: __init__.py  i_clock.py
src/admin/app/use_cases/: __init__.py  render_dashboard_uc.py
src/admin/domain/: __init__.py  build_info_vo.py  dashboard_view_vo.py
src/admin/log/: config.py  provider.py
src/admin/log/app/: __init__.py
src/admin/log/domain/: __init__.py  dsl_constants.py  dsl_parser.py  errors.py  log_entry_ent.py  log_filter_vo.py  types.py
src/auth/: config.py  provider.py
src/auth/adapters/middleware/: __init__.py  auth_middleware.py
src/auth/app/: __init__.py
src/auth/app/interfaces/: __init__.py  i_token_resolver.py
src/auth/app/use_cases/: __init__.py  authenticate_uc.py
src/auth/ports/driven/: __init__.py
src/auth/ports/driving/: __init__.py  guards.py
src/root/: config.py
src/root/composition/: container.py
src/root/entrypoints/: api.py  cli.py
src/root/helpers/: process.py  server.py
src/shared/: config.py  logging.py  provider.py
src/shared/adapters/: error_handlers.py
src/shared/adapters/middleware/: __init__.py  access_log_middleware.py  security_headers_middleware.py  trace_middleware.py
src/shared/app/: __init__.py  i_event_bus.py
src/shared/generics/: config.py  errors.py  json_utils.py
storage/logs/: admin_logs.db  admin_logs.db-shm  admin_logs.db-wal
tests/: _e2e_constants.py  conftest.py
tests/e2e/: conftest.py
tests/e2e/admin/: conftest.py
tests/unit/root/: test_config.py  test_config_prod_validator.py
tests/unit/shared/: test_config.py  test_logging.py  test_provider.py
(+86 files in other folders)
